# poetry-plugin-mono-repo-deps

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
poetry_plugin_mono_repo_deps/: plugin.py
poetry_plugin_pin_path_deps/: __init__.py
tests/: conftest.py  helpers.py  test_commands_e2e.py  test_plugin.py
tests/fixtures/: __init__.py
tests/fixtures/simple_a/lib-a/: pyproject.toml
tests/fixtures/simple_a/lib-auto-enabled/: pyproject.toml
tests/fixtures/simple_a/lib-b/: pyproject.toml
tests/fixtures/simple_a/lib-disabled/: pyproject.toml
tests/fixtures/simple_a/lib-enabled/: pyproject.toml
tests/fixtures/simple_a/lib-enabled-extras/: pyproject.toml
tests/fixtures/simple_a/lib-enabled-no-commands/: pyproject.toml
tests/fixtures/simple_a/lib-enabled-optional/: pyproject.toml
tests/fixtures/simple_a/lib-independent/: pyproject.toml
tests/fixtures/simple_a/lib-missing/: pyproject.toml
tests/fixtures/simple_a/lib-nested/: pyproject.toml
